Update 第十二课 课文 衍生词汇.md

--- a/第十二课 课文 衍生词汇.md
+++ b/第十二课 课文 衍生词汇.md
@@ -35,7 +35,7 @@
 
 (ที่หอพักของเรืองรวีในมหาวิทยาลัยปักกิ่ง)
 
-เสาวนีย์ 	วี เราพาเพื่อนมาให้เธอรู้จักคนหนึ่ง นีมนตรี เพื่อนร่วมชั้นของนี
+เสาวนีย์ 	วี เราพาเพื่อนมาให้เธอรู้จักคนหนึ่ง นี่มนตรี เพื่อนร่วมชั้นของนี
 
 เรื่องรวี	สวัสดีค่ะ
 
@@ -49,131 +49,138 @@
 
 เสาวนีย์	มนตรีไม่ต้องเกรงใจวีเขาหรอก ฉันกับวีสนิทกันมาก ฉันหวังว่าเธอกับวีก็จะเป็นเพื่อนที่ดีต่อไป
 
-แนะนำตัว	-	Self-introduction	-	自我介绍	-	Self-introduction	-	Self-introduction	-	Self-introduction	-	Self-introduction	-	Self-introduction	-	Self-introduction	-	Self-introduction	-	Self-introduction	-	自我介绍
 
-คำแนะนำ	-	Advice	-	建议的话	-	Advice	-	Advice	-	Advice	-	Advice	-	Advice	-	Advice	-	Advice	-	Advice	-	建议的话
 
-แนะนำให้	-	Recommend to do something	-	建议某人做某事	-	Recommend to do something	-	Recommend to do something	-	Recommend to do something	-	Recommend to do something	-	Recommend to do something	-	Recommend to do something	-	Recommend to do something	-	Recommend to do something	-	建议某人做某事
+แนะนำตัว	-	Self-introduction	-	自我介绍	-	แนะนำตัว	-	แนะนำตัว	-	แนะนำตัว	-	แนะนำตัว	-	แนะนำตัว	-	แนะนำตัว	-	แนะนำตัว	-	แนะนำตัว	-	自我介绍	-	แนะนำตัว
 
-แนะนำให้ทำ	-	Suggest doing something	-	建议做某事	-	Suggest doing something	-	Suggest doing something	-	Suggest doing something	-	Suggest doing something	-	Suggest doing something	-	Suggest doing something	-	Suggest doing something	-	Suggest doing something	-	建议做某事
+คำแนะนำ	-	Advice	-	建议的话	-	คำแนะนำ	-	คำแนะนำ	-	คำแนะนำ	-	คำแนะนำ	-	คำแนะนำ	-	คำแนะนำ	-	คำแนะนำ	-	คำแนะนำ	-	建议的话	-	คำแนะนำ
 
-แนะนำเพื่อนให้รู้จักกับคุณ	-	Introduce a friend to you	-	把朋友介绍给你认识	-	Introduce a friend to you	-	Introduce a friend to you	-	Introduce a friend to you	-	Introduce a friend to you	-	Introduce a friend to you	-	Introduce a friend to you	-	Introduce a friend to you	-	Introduce a friend to you	-	把朋友介绍给你认识
+แนะนำให้	-	Recommend to do something	-	建议某人做某事	-	แนะนำให้	-	แนะนำให้	-	แนะนำให้	-	แนะนำให้	-	แนะนำให้	-	แนะนำให้	-	แนะนำให้	-	แนะนำให้	-	建议某人做某事	-	แนะนำให้
 
-ลูกสาว	-	Daughter	-	女儿	-	Daughter	-	Daughter	-	Daughter	-	Daughter	-	Daughter	-	Daughter	-	Daughter	-	Daughter	-	女儿
+แนะนำให้ทำ	-	Suggest doing something	-	建议做某事	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	แนะนำให้ทำ	-	建议做某事	-	แนะนำให้ทำ
 
-ลูกชาย	-	Son	-	儿子	-	Son	-	Son	-	Son	-	Son	-	Son	-	Son	-	Son	-	Son	-	儿子
+แนะนำเพื่อนให้รู้จักกับคุณ	-	Introduce a friend to you	-	把朋友介绍给你认识	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	แนะนำเพื่อนให้รู้จักกับคุณ	-	把朋友介绍给你认识	-	แนะนำเพื่อนให้รู้จักกับคุณ
 
-ลูกหลาน	-	Descendants	-	子孙	-	Descendants	-	Descendants	-	Descendants	-	Descendants	-	Descendants	-	Descendants	-	Descendants	-	Descendants	-	子孙
+ลูกสาว	-	Daughter	-	女儿	-	ลูกสาว	-	ลูกสาว	-	ลูกสาว	-	ลูกสาว	-	ลูกสาว	-	ลูกสาว	-	ลูกสาว	-	ลูกสาว	-	女儿	-	ลูกสาว
 
-ยินดีต้อนรับ	-	Welcome	-	欢迎	-	Welcome	-	Welcome	-	Welcome	-	Welcome	-	Welcome	-	Welcome	-	Welcome	-	Welcome	-	欢迎
+ลูกชาย	-	Son	-	儿子	-	ลูกชาย	-	ลูกชาย	-	ลูกชาย	-	ลูกชาย	-	ลูกชาย	-	ลูกชาย	-	ลูกชาย	-	ลูกชาย	-	儿子	-	ลูกชาย
 
-ยินดีให้บริการ	-	Happy to serve	-	很高兴为您服务	-	Happy to serve	-	Happy to serve	-	Happy to serve	-	Happy to serve	-	Happy to serve	-	Happy to serve	-	Happy to serve	-	Happy to serve	-	很高兴为您服务
+ลูกหลาน	-	Descendants	-	子孙	-	ลูกหลาน	-	ลูกหลาน	-	ลูกหลาน	-	ลูกหลาน	-	ลูกหลาน	-	ลูกหลาน	-	ลูกหลาน	-	ลูกหลาน	-	子孙	-	ลูกหลาน
 
-หล่อเหลา	-	Handsome	-	英俊的	-	Handsome	-	Handsome	-	Handsome	-	Handsome	-	Handsome	-	Handsome	-	Handsome	-	Handsome	-	英俊的
+ยินดีต้อนรับ	-	Welcome	-	欢迎	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	ยินดีต้อนรับ	-	欢迎	-	ยินดีต้อนรับ
 
-มากมาย	-	Abundant	-	大量的	-	Abundant	-	Abundant	-	Abundant	-	Abundant	-	Abundant	-	Abundant	-	Abundant	-	Abundant	-	大量的
+ยินดีให้บริการ	-	Happy to serve	-	很高兴为您服务	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	ยินดีให้บริการ	-	很高兴为您服务	-	ยินดีให้บริการ
 
-เช่นกัน	-	Likewise	-	与…类似	-	Likewise	-	Likewise	-	Likewise	-	Likewise	-	Likewise	-	Likewise	-	Likewise	-	Likewise	-	与…类似
+หล่อเหลา	-	Handsome	-	英俊的	-	หล่อเหลา	-	หล่อเหลา	-	หล่อเหลา	-	หล่อเหลา	-	หล่อเหลา	-	หล่อเหลา	-	หล่อเหลา	-	หล่อเหลา	-	英俊的	-	หล่อเหลา
 
-เช่น	-	Such as	-	像	-	Such as	-	Such as	-	Such as	-	Such as	-	Such as	-	Such as	-	Such as	-	Such as	-	像
+มากมาย	-	Abundant	-	大量的	-	มากมาย	-	มากมาย	-	มากมาย	-	มากมาย	-	มากมาย	-	มากมาย	-	มากมาย	-	มากมาย	-	大量的	-	มากมาย
 
-เช่นนี้	-	Like this	-	像这样	-	Like this	-	Like this	-	Like this	-	Like this	-	Like this	-	Like this	-	Like this	-	Like this	-	像这样
+เช่นกัน	-	Likewise	-	与…类似	-	เช่นกัน	-	เช่นกัน	-	เช่นกัน	-	เช่นกัน	-	เช่นกัน	-	เช่นกัน	-	เช่นกัน	-	เช่นกัน	-	与…类似	-	เช่นกัน
 
-เช่นนั้น	-	Like that	-	像那样	-	Like that	-	Like that	-	Like that	-	Like that	-	Like that	-	Like that	-	Like that	-	Like that	-	像那样
+เช่น	-	Such as	-	像	-	เช่น	-	เช่น	-	เช่น	-	เช่น	-	เช่น	-	เช่น	-	เช่น	-	เช่น	-	像	-	เช่น
 
-เดียว	-	Single	-	单个	-	Single	-	Single	-	Single	-	Single	-	Single	-	Single	-	Single	-	Single	-	单个
+เช่นนี้	-	Like this	-	像这样	-	เช่นนี้	-	เช่นนี้	-	เช่นนี้	-	เช่นนี้	-	เช่นนี้	-	เช่นนี้	-	เช่นนี้	-	เช่นนี้	-	像这样	-	เช่นนี้
 
-เพียงเดียว	-	Only one	-	只有一个	-	Only one	-	Only one	-	Only one	-	Only one	-	Only one	-	Only one	-	Only one	-	Only one	-	只有一个
+เช่นนั้น	-	Like that	-	像那样	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	เช่นนั้น	-	像那样	-	เช่นนั้น
 
-ลูกเพียงเดียว	-	Only child	-	独生子	-	Only child	-	Only child	-	Only child	-	Only child	-	Only child	-	Only child	-	Only child	-	Only child	-	独生子
+เดียว	-	Single	-	单个	-	เดียว	-	เดียว	-	เดียว	-	เดียว	-	เดียว	-	เดียว	-	เดียว	-	เดียว	-	单个	-	เดียว
 
-ธุระส่วนตัว	-	Personal matters	-	私人事情	-	Personal matters	-	Personal matters	-	Personal matters	-	Personal matters	-	Personal matters	-	Personal matters	-	Personal matters	-	Personal matters	-	私人事情
 
-บังเอิญเจอ	-	To meet by chance	-	碰巧遇见	-	To meet by chance	-	To meet by chance	-	To meet by chance	-	To meet by chance	-	To meet by chance	-	To meet by chance	-	To meet by chance	-	To meet by chance	-	碰巧遇见
+เพียงเดียว	-	Only one	-	只有一个	-	เพียงเดียว	-	เพียงเดียว	-	เพียงเดียว	-	เพียงเดียว	-	เพียงเดียว	-	เพียงเดียว	-	เพียงเดียว	-	เพียงเดียว	-	只有一个	-	เพียงเดียว
 
-บังเอิญได้ยิน	-	To accidentally hear	-	不小心听到	-	To accidentally hear	-	To accidentally hear	-	To accidentally hear	-	To accidentally hear	-	To accidentally hear	-	To accidentally hear	-	To accidentally hear	-	To accidentally hear	-	不小心听到
 
-ผ่านการทดสอบ	-	Pass the test	-	通过测试	-	Pass the test	-	Pass the test	-	Pass the test	-	Pass the test	-	Pass the test	-	Pass the test	-	Pass the test	-	Pass the test	-	通过测试
+ลูกเพียงเดียว	-	Only child	-	独生子	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	ลูกเพียงเดียว	-	独生子	-	ลูกเพียงเดียว
 
-ทางรถไฟ	-	Railway	-	铁路	-	Railway	-	Railway	-	Railway	-	Railway	-	Railway	-	Railway	-	Railway	-	Railway	-	铁路
+ธุระส่วนตัว	-	Personal matters	-	私人事情	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	ธุระส่วนตัว	-	私人事情	-	ธุระส่วนตัว
 
-ทางเดิน	-	Pathway	-	人行路	-	Pathway	-	Pathway	-	Pathway	-	Pathway	-	Pathway	-	Pathway	-	Pathway	-	Pathway	-	人行路
+บังเอิญเจอ	-	To meet by chance	-	碰巧遇见	-	บังเอิญเจอ	-	บังเอิญเจอ	-	บังเอิญเจอ	-	บังเอิญเจอ	-	บังเอิญเจอ	-	บังเอิญเจอ	-	บังเอิญเจอ	-	บังเอิญเจอ	-	碰巧遇见	-	บังเอิญเจอ
 
-แวะซื้อของ	-	To stop by and shop	-	顺便买点东西	-	To stop by and shop	-	To stop by and shop	-	To stop by and shop	-	To stop by and shop	-	To stop by and shop	-	To stop by and shop	-	To stop by and shop	-	To stop by and shop	-	顺便买点东西
+บังเอิญได้ยิน	-	To accidentally hear	-	不小心听到	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	บังเอิญได้ยิน	-	不小心听到	-	บังเอิญได้ยิน
 
-เพื่อนร่วมงาน	-	Colleague	-	同事	-	Colleague	-	Colleague	-	Colleague	-	Colleague	-	Colleague	-	Colleague	-	Colleague	-	Colleague	-	同事
+ผ่านการทดสอบ	-	Pass the test	-	通过测试	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	ผ่านการทดสอบ	-	通过测试	-	ผ่านการทดสอบ
 
-เพื่อนสนิท	-	Close friend	-	密友	-	Close friend	-	Close friend	-	Close friend	-	Close friend	-	Close friend	-	Close friend	-	Close friend	-	Close friend	-	密友
+ทางรถไฟ	-	Railway	-	铁路	-	ทางรถไฟ	-	ทางรถไฟ	-	ทางรถไฟ	-	ทางรถไฟ	-	ทางรถไฟ	-	ทางรถไฟ	-	ทางรถไฟ	-	ทางรถไฟ	-	铁路	-	ทางรถไฟ
 
-เพื่อนบ้าน	-	Neighbor	-	邻居	-	Neighbor	-	Neighbor	-	Neighbor	-	Neighbor	-	Neighbor	-	Neighbor	-	Neighbor	-	Neighbor	-	邻居
+ทางเดิน	-	Pathway	-	人行路	-	ทางเดิน	-	ทางเดิน	-	ทางเดิน	-	ทางเดิน	-	ทางเดิน	-	ทางเดิน	-	ทางเดิน	-	ทางเดิน	-	人行路	-	ทางเดิน
 
-เที่ยวเล่น	-	To go for fun	-	游玩	-	To go for fun	-	To go for fun	-	To go for fun	-	To go for fun	-	To go for fun	-	To go for fun	-	To go for fun	-	To go for fun	-	游玩
+แวะซื้อของ	-	To stop by and shop	-	顺便买点东西	-	แวะซื้อของ	-	แวะซื้อของ	-	แวะซื้อของ	-	แวะซื้อของ	-	แวะซื้อของ	-	แวะซื้อของ	-	แวะซื้อของ	-	แวะซื้อของ	-	顺便买点东西	-	แวะซื้อของ
 
-เที่ยวชม	-	To tour	-	观光	-	To tour	-	To tour	-	To tour	-	To tour	-	To tour	-	To tour	-	To tour	-	To tour	-	观光
+เพื่อนร่วมงาน	-	Colleague	-	同事	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	同事	-	เพื่อนร่วมงาน
 
-เล่นกีฬา	-	To play sports	-	做运动	-	To play sports	-	To play sports	-	To play sports	-	To play sports	-	To play sports	-	To play sports	-	To play sports	-	To play sports	-	做运动
+เพื่อนสนิท	-	Close friend	-	密友	-	เพื่อนสนิท	-	เพื่อนสนิท	-	เพื่อนสนิท	-	เพื่อนสนิท	-	เพื่อนสนิท	-	เพื่อนสนิท	-	เพื่อนสนิท	-	เพื่อนสนิท	-	密友	-	เพื่อนสนิท
 
-เล่นเกม	-	To play games	-	玩游戏	-	To play games	-	To play games	-	To play games	-	To play games	-	To play games	-	To play games	-	To play games	-	To play games	-	玩游戏
+เพื่อนบ้าน	-	Neighbor	-	邻居	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	เพื่อนบ้าน	-	邻居	-	เพื่อนบ้าน
 
-เล่นดนตรี	-	To play music	-	弹奏音乐	-	To play music	-	To play music	-	To play music	-	To play music	-	To play music	-	To play music	-	To play music	-	To play music	-	弹奏音乐
+เที่ยวเล่น	-	To go for fun	-	游玩	-	เที่ยวเล่น	-	เที่ยวเล่น	-	เที่ยวเล่น	-	เที่ยวเล่น	-	เที่ยวเล่น	-	เที่ยวเล่น	-	เที่ยวเล่น	-	เที่ยวเล่น	-	游玩	-	เที่ยวเล่น
 
-พวกเดียวกัน	-	People of the same kind	-	同一类人	-	People of the same kind	-	People of the same kind	-	People of the same kind	-	People of the same kind	-	People of the same kind	-	People of the same kind	-	People of the same kind	-	People of the same kind	-	同一类人
+เที่ยวชม	-	To tour	-	观光	-	เที่ยวชม	-	เที่ยวชม	-	เที่ยวชม	-	เที่ยวชม	-	เที่ยวชม	-	เที่ยวชม	-	เที่ยวชม	-	เที่ยวชม	-	观光	-	เที่ยวชม
 
-ขอให้มีความสุข	-	Wish you happiness	-	祝你幸福	-	Wish you happiness	-	Wish you happiness	-	Wish you happiness	-	Wish you happiness	-	Wish you happiness	-	Wish you happiness	-	Wish you happiness	-	Wish you happiness	-	祝你幸福
+เล่นกีฬา	-	To play sports	-	做运动	-	เล่นกีฬา	-	เล่นกีฬา	-	เล่นกีฬา	-	เล่นกีฬา	-	เล่นกีฬา	-	เล่นกีฬา	-	เล่นกีฬา	-	เล่นกีฬา	-	做运动	-	เล่นกีฬา
 
-ขอให้โชคดี	-	Wish you good luck	-	祝你好运	-	Wish you good luck	-	Wish you good luck	-	Wish you good luck	-	Wish you good luck	-	Wish you good luck	-	Wish you good luck	-	Wish you good luck	-	Wish you good luck	-	祝你好运
+เล่นเกม	-	To play games	-	玩游戏	-	เล่นเกม	-	เล่นเกม	-	เล่นเกม	-	เล่นเกม	-	เล่นเกม	-	เล่นเกม	-	เล่นเกม	-	เล่นเกม	-	玩游戏	-	เล่นเกม
 
-ขอให้หายเร็วๆ	-	Wish you a speedy recovery	-	快点好起来	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	Wish you a speedy recovery	-	快点好起来
+เล่นดนตรี	-	To play music	-	弹奏音乐	-	เล่นดนตรี	-	เล่นดนตรี	-	เล่นดนตรี	-	เล่นดนตรี	-	เล่นดนตรี	-	เล่นดนตรี	-	เล่นดนตรี	-	เล่นดนตรี	-	弹奏音乐	-	เล่นดนตรี
 
-เหมือนกัน	-	Same here	-	与…相同	-	Same here	-	Same here	-	Same here	-	Same here	-	Same here	-	Same here	-	Same here	-	Same here	-	与…相同
+พวกเดียวกัน	-	People of the same kind	-	同一类人	-	พวกเดียวกัน	-	พวกเดียวกัน	-	พวกเดียวกัน	-	พวกเดียวกัน	-	พวกเดียวกัน	-	พวกเดียวกัน	-	พวกเดียวกัน	-	พวกเดียวกัน	-	同一类人	-	พวกเดียวกัน
 
-ไม่เหมือน	-	Different	-	不一样	-	Different	-	Different	-	Different	-	Different	-	Different	-	Different	-	Different	-	Different	-	不一样
+ขอให้มีความสุข	-	Wish you happiness	-	祝你幸福	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	ขอให้มีความสุข	-	祝你幸福	-	ขอให้มีความสุข
 
-เหมือนจะ	-	It seems like	-	似乎	-	It seems like	-	It seems like	-	It seems like	-	It seems like	-	It seems like	-	It seems like	-	It seems like	-	It seems like	-	似乎
+ขอให้โชคดี	-	Wish you good luck	-	祝你好运	-	ขอให้โชคดี	-	ขอให้โชคดี	-	ขอให้โชคดี	-	ขอให้โชคดี	-	ขอให้โชคดี	-	ขอให้โชคดี	-	ขอให้โชคดี	-	ขอให้โชคดี	-	祝你好运	-	ขอให้โชคดี
 
-จำได้	-	Remembered	-	记得	-	Remembered	-	Remembered	-	Remembered	-	Remembered	-	Remembered	-	Remembered	-	Remembered	-	Remembered	-	记得
+ขอให้หายเร็วๆ	-	Wish you a speedy recovery	-	快点好起来	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	ขอให้หายเร็วๆ	-	快点好起来	-	ขอให้หายเร็วๆ
 
-จำไม่ได้	-	Don’t remember	-	不记得	-	Don’t remember	-	Don’t remember	-	Don’t remember	-	Don’t remember	-	Don’t remember	-	Don’t remember	-	Don’t remember	-	Don’t remember	-	不记得
+เหมือนกัน	-	Same here	-	与…相同	-	เหมือนกัน	-	เหมือนกัน	-	เหมือนกัน	-	เหมือนกัน	-	เหมือนกัน	-	เหมือนกัน	-	เหมือนกัน	-	เหมือนกัน	-	与…相同	-	เหมือนกัน
 
-ครั้ง	-	Time (occasion)	-	次	-	Time (occasion)	-	Time (occasion)	-	Time (occasion)	-	Time (occasion)	-	Time (occasion)	-	Time (occasion)	-	Time (occasion)	-	Time (occasion)	-	次
+ไม่เหมือน	-	Different	-	不一样	-	ไม่เหมือน	-	ไม่เหมือน	-	ไม่เหมือน	-	ไม่เหมือน	-	ไม่เหมือน	-	ไม่เหมือน	-	ไม่เหมือน	-	ไม่เหมือน	-	不一样	-	ไม่เหมือน
 
-ครั้งแรก	-	First time	-	第一次	-	First time	-	First time	-	First time	-	First time	-	First time	-	First time	-	First time	-	First time	-	第一次
+เหมือนจะ	-	It seems like	-	似乎	-	เหมือนจะ	-	เหมือนจะ	-	เหมือนจะ	-	เหมือนจะ	-	เหมือนจะ	-	เหมือนจะ	-	เหมือนจะ	-	เหมือนจะ	-	似乎	-	เหมือนจะ
 
-ครั้งที่สอง	-	Second time	-	第二次	-	Second time	-	Second time	-	Second time	-	Second time	-	Second time	-	Second time	-	Second time	-	Second time	-	第二次
+จำได้	-	Remembered	-	记得	-	จำได้	-	จำได้	-	จำได้	-	จำได้	-	จำได้	-	จำได้	-	จำได้	-	จำได้	-	记得	-	จำได้
 
-สบายใจ	-	At ease, peaceful	-	心情愉悦	-	At ease, peaceful	-	At ease, peaceful	-	At ease, peaceful	-	At ease, peaceful	-	At ease, peaceful	-	At ease, peaceful	-	At ease, peaceful	-	At ease, peaceful	-	心情愉悦
+จำไม่ได้	-	Don’t remember	-	不记得	-	จำไม่ได้	-	จำไม่ได้	-	จำไม่ได้	-	จำไม่ได้	-	จำไม่ได้	-	จำไม่ได้	-	จำไม่ได้	-	จำไม่ได้	-	不记得	-	จำไม่ได้
 
-รู้สึกแย่	-	Feel bad	-	感觉不好	-	Feel bad	-	Feel bad	-	Feel bad	-	Feel bad	-	Feel bad	-	Feel bad	-	Feel bad	-	Feel bad	-	感觉不好
+ครั้ง	-	Time (occasion)	-	次	-	ครั้ง	-	ครั้ง	-	ครั้ง	-	ครั้ง	-	ครั้ง	-	ครั้ง	-	ครั้ง	-	ครั้ง	-	次	-	ครั้ง
 
-รู้สึกแปลก	-	Feel strange	-	感觉奇怪	-	Feel strange	-	Feel strange	-	Feel strange	-	Feel strange	-	Feel strange	-	Feel strange	-	Feel strange	-	Feel strange	-	感觉奇怪
+ครั้งแรก	-	First time	-	第一次	-	ครั้งแรก	-	ครั้งแรก	-	ครั้งแรก	-	ครั้งแรก	-	ครั้งแรก	-	ครั้งแรก	-	ครั้งแรก	-	ครั้งแรก	-	第一次	-	ครั้งแรก
 
-สมบูรณ์แบบ	-	Perfect	-	完美的	-	Perfect	-	Perfect	-	Perfect	-	Perfect	-	Perfect	-	Perfect	-	Perfect	-	Perfect	-	完美的
+ครั้งที่สอง	-	Second time	-	第二次	-	ครั้งที่สอง	-	ครั้งที่สอง	-	ครั้งที่สอง	-	ครั้งที่สอง	-	ครั้งที่สอง	-	ครั้งที่สอง	-	ครั้งที่สอง	-	ครั้งที่สอง	-	第二次	-	ครั้งที่สอง
 
-ความสมบูรณ์	-	Completeness	-	完整性	-	Completeness	-	Completeness	-	Completeness	-	Completeness	-	Completeness	-	Completeness	-	Completeness	-	Completeness	-	完整性
+สบายใจ	-	At ease, peaceful	-	心情愉悦	-	สบายใจ	-	สบายใจ	-	สบายใจ	-	สบายใจ	-	สบายใจ	-	สบายใจ	-	สบายใจ	-	สบายใจ	-	心情愉悦	-	สบายใจ
 
-แข็งแกร่ง	-	Strong	-	坚强	-	Strong	-	Strong	-	Strong	-	Strong	-	Strong	-	Strong	-	Strong	-	Strong	-	坚强
+รู้สึกแย่	-	Feel bad	-	感觉不好	-	รู้สึกแย่	-	รู้สึกแย่	-	รู้สึกแย่	-	รู้สึกแย่	-	รู้สึกแย่	-	รู้สึกแย่	-	รู้สึกแย่	-	รู้สึกแย่	-	感觉不好	-	รู้สึกแย่
 
-เพื่อนร่วมงาน	-	Co-worker	-	同事	-	Co-worker	-	Co-worker	-	Co-worker	-	Co-worker	-	Co-worker	-	Co-worker	-	Co-worker	-	Co-worker	-	同事
+รู้สึกแปลก	-	Feel strange	-	感觉奇怪	-	รู้สึกแปลก	-	รู้สึกแปลก	-	รู้สึกแปลก	-	รู้สึกแปลก	-	รู้สึกแปลก	-	รู้สึกแปลก	-	รู้สึกแปลก	-	รู้สึกแปลก	-	感觉奇怪	-	รู้สึกแปลก
 
-นั่งลง	-	Sit down	-	坐下	-	Sit down	-	Sit down	-	Sit down	-	Sit down	-	Sit down	-	Sit down	-	Sit down	-	Sit down	-	坐下
+สมบูรณ์แบบ	-	Perfect	-	完美的	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	สมบูรณ์แบบ	-	完美的	-	สมบูรณ์แบบ
 
-นั่งยอง	-	Squat down	-	蹲下	-	Squat down	-	Squat down	-	Squat down	-	Squat down	-	Squat down	-	Squat down	-	Squat down	-	Squat down	-	蹲下
+ความสมบูรณ์	-	Completeness	-	完整性	-	ความสมบูรณ์	-	ความสมบูรณ์	-	ความสมบูรณ์	-	ความสมบูรณ์	-	ความสมบูรณ์	-	ความสมบูรณ์	-	ความสมบูรณ์	-	ความสมบูรณ์	-	完整性	-	ความสมบูรณ์
 
-ชาม	-	Bowl	-	茶碗	-	Bowl	-	Bowl	-	Bowl	-	Bowl	-	Bowl	-	Bowl	-	Bowl	-	Bowl	-	茶碗
+แข็งแกร่ง	-	Strong	-	坚强	-	แข็งแกร่ง	-	แข็งแกร่ง	-	แข็งแกร่ง	-	แข็งแกร่ง	-	แข็งแกร่ง	-	แข็งแกร่ง	-	แข็งแกร่ง	-	แข็งแกร่ง	-	坚强	-	แข็งแกร่ง
 
-อากาศร้อน	-	Hot weather	-	天气热	-	Hot weather	-	Hot weather	-	Hot weather	-	Hot weather	-	Hot weather	-	Hot weather	-	Hot weather	-	Hot weather	-	天气热
+เพื่อนร่วมงาน	-	Co-worker	-	同事	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	เพื่อนร่วมงาน	-	同事	-	เพื่อนร่วมงาน
 
-ร้อนแรง	-	Intense, fierce	-	火热	-	Intense, fierce	-	Intense, fierce	-	Intense, fierce	-	Intense, fierce	-	Intense, fierce	-	Intense, fierce	-	Intense, fierce	-	Intense, fierce	-	火热
+นั่งลง	-	Sit down	-	坐下	-	นั่งลง	-	นั่งลง	-	นั่งลง	-	นั่งลง	-	นั่งลง	-	นั่งลง	-	นั่งลง	-	นั่งลง	-	坐下	-	นั่งลง
 
-ใจร้อน	-	Impatient	-	急躁	-	Impatient	-	Impatient	-	Impatient	-	Impatient	-	Impatient	-	Impatient	-	Impatient	-	Impatient	-	急躁
+นั่งยอง	-	Squat down	-	蹲下	-	นั่งยอง	-	นั่งยอง	-	นั่งยอง	-	นั่งยอง	-	นั่งยอง	-	นั่งยอง	-	นั่งยอง	-	นั่งยอง	-	蹲下	-	นั่งยอง
 
-บอกข่าว	-	Tell the news	-	告诉消息	-	Tell the news	-	Tell the news	-	Tell the news	-	Tell the news	-	Tell the news	-	Tell the news	-	Tell the news	-	Tell the news	-	告诉消息
+ชาม	-	Bowl	-	茶碗	-	ชาม	-	ชาม	-	ชาม	-	ชาม	-	ชาม	-	ชาม	-	ชาม	-	ชาม	-	茶碗	-	ชาม
 
-ลำบากใจ	-	Feeling troubled	-	为难	-	Feeling troubled	-	Feeling troubled	-	Feeling troubled	-	Feeling troubled	-	Feeling troubled	-	Feeling troubled	-	Feeling troubled	-	Feeling troubled	-	为难
+อากาศร้อน	-	Hot weather	-	天气热	-	อากาศร้อน	-	อากาศร้อน	-	อากาศร้อน	-	อากาศร้อน	-	อากาศร้อน	-	อากาศร้อน	-	อากาศร้อน	-	อากาศร้อน	-	天气热	-	อากาศร้อน
 
-คุยเล่น	-	Chat playfully	-	开玩笑地聊天	-	Chat playfully	-	Chat playfully	-	Chat playfully	-	Chat playfully	-	Chat playfully	-	Chat playfully	-	Chat playfully	-	Chat playfully	-	开玩笑地聊天
+ร้อนแรง	-	Intense, fierce	-	火热	-	ร้อนแรง	-	ร้อนแรง	-	ร้อนแรง	-	ร้อนแรง	-	ร้อนแรง	-	ร้อนแรง	-	ร้อนแรง	-	ร้อนแรง	-	火热	-	ร้อนแรง
 
-ความหวัง	-	Hope	-	希望	-	Hope	-	Hope	-	Hope	-	Hope	-	Hope	-	Hope	-	Hope	-	Hope	-	希望
+ใจร้อน	-	Impatient	-	急躁	-	ใจร้อน	-	ใจร้อน	-	ใจร้อน	-	ใจร้อน	-	ใจร้อน	-	ใจร้อน	-	ใจร้อน	-	ใจร้อน	-	急躁	-	ใจร้อน
 
-ต่อไปนี้	-	From now on	-	从现在开始	-	From now on	-	From now on	-	From now on	-	From now on	-	From now on	-	From now on	-	From now on	-	From now on	-	从现在开始
-ไปต่อไป	-	Go ahead	-	接着走	-	Go ahead	-	Go ahead	-	Go ahead	-	Go ahead	-	Go ahead	-	Go ahead	-	Go ahead	-	Go ahead	-	接着走
+บอกข่าว	-	Tell the news	-	告诉消息	-	บอกข่าว	-	บอกข่าว	-	บอกข่าว	-	บอกข่าว	-	บอกข่าว	-	บอกข่าว	-	บอกข่าว	-	บอกข่าว	-	告诉消息	-	บอกข่าว
+
+ลำบากใจ	-	Feeling troubled	-	为难	-	ลำบากใจ	-	ลำบากใจ	-	ลำบากใจ	-	ลำบากใจ	-	ลำบากใจ	-	ลำบากใจ	-	ลำบากใจ	-	ลำบากใจ	-	为难	-	ลำบากใจ
+
+คุยเล่น	-	Chat playfully	-	开玩笑地聊天	-	คุยเล่น	-	คุยเล่น	-	คุยเล่น	-	คุยเล่น	-	คุยเล่น	-	คุยเล่น	-	คุยเล่น	-	คุยเล่น	-	开玩笑地聊天	-	คุยเล่น
+
+ความหวัง	-	Hope	-	希望	-	ความหวัง	-	ความหวัง	-	ความหวัง	-	ความหวัง	-	ความหวัง	-	ความหวัง	-	ความหวัง	-	ความหวัง	-	希望	-	ความหวัง
+
+ต่อไปนี้	-	From now on	-	从现在开始	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	从现在开始	-	ต่อไปนี้
+
+ไปต่อไป	-	Go ahead	-	接着走	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	接着走	-	ไปต่อไป<img width="1344" alt="image" src="https://github.com/user-attachments/assets/5d92fe4f-5725-4fda-a1fb-1cfc4d60aa80" />
+
+
