Update 第十二课 课文 衍生词汇.md

--- a/第十二课 课文 衍生词汇.md
+++ b/第十二课 课文 衍生词汇.md
@@ -181,6 +181,4 @@
 
 ต่อไปนี้	-	From now on	-	从现在开始	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	ต่อไปนี้	-	从现在开始	-	ต่อไปนี้
 
-ไปต่อไป	-	Go ahead	-	接着走	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	接着走	-	ไปต่อไป<img width="1344" alt="image" src="https://github.com/user-attachments/assets/5d92fe4f-5725-4fda-a1fb-1cfc4d60aa80" />
-
-
+ไปต่อไป	-	Go ahead	-	接着走	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	ไปต่อไป	-	接着走	-	ไปต่อไป
