Update 13课 泰语班 课文.md

--- a/13课 泰语班 课文.md
+++ b/13课 泰语班 课文.md
@@ -4,7 +4,9 @@
 
 สวัสดีค่ะ	！	สวัสดีค่ะ	！	สวัสดีค่ะ	！	สวัสดีค่ะ	！	สวัสดีค่ะ	！	สวัสดีค่ะ
 
-คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับเล็กนี่ชื่อเล่นหรือชื่อจริงคะ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับเล็กนี่ชื่อเล่นหรือชื่อจริงคะ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับเล็กนี่ชื่อเล่นหรือชื่อจริงคะ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับเล็กนี่ชื่อเล่นหรือชื่อจริงคะ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับเล็กนี่ชื่อเล่นหรือชื่อจริงคะ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับเล็กนี่ชื่อเล่นหรือชื่อจริงคะ
+คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับ	！	คุณเล็กเป็นนักศึกษาของมหาวิทยาลัยภาษาปักกิ่งครับ
+
+เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！เล็กนี่ชื่อเล่นหรือชื่อจริงคะ！
 
 ชื่อเล่นครับ ชื่อจริงผมชื่อวินัย เอกชัย	！	ชื่อเล่นครับ ชื่อจริงผมชื่อวินัย เอกชัย	！	ชื่อเล่นครับ ชื่อจริงผมชื่อวินัย เอกชัย	！	ชื่อเล่นครับ ชื่อจริงผมชื่อวินัย เอกชัย	！	ชื่อเล่นครับ ชื่อจริงผมชื่อวินัย เอกชัย	！	ชื่อเล่นครับ ชื่อจริงผมชื่อวินัย เอกชัย
 
@@ -12,9 +14,7 @@
 
 เรียกเล็กก็แล้วกันครับ คุณก็เป็นนักศึกษามหาวิทยาลัยปักกิ่งหรือครับ	！	เรียกเล็กก็แล้วกันครับ คุณก็เป็นนักศึกษามหาวิทยาลัยปักกิ่งหรือครับ	！	เรียกเล็กก็แล้วกันครับ คุณก็เป็นนักศึกษามหาวิทยาลัยปักกิ่งหรือครับ	！	เรียกเล็กก็แล้วกันครับ คุณก็เป็นนักศึกษามหาวิทยาลัยปักกิ่งหรือครับ	！	เรียกเล็กก็แล้วกันครับ คุณก็เป็นนักศึกษามหาวิทยาลัยปักกิ่งหรือครับ	！	เรียกเล็กก็แล้วกันครับ คุณก็เป็นนักศึกษามหาวิทยาลัยปักกิ่งหรือครับ
 
-ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศ
-
-ปักกิ่งค่ะ	！	ปักกิ่งค่ะ	！	ปักกิ่งค่ะ	！	ปักกิ่งค่ะ	！	ปักกิ่งค่ะ	！	ปักกิ่งค่ะ
+ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศปักกิ่งค่ะ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศปักกิ่งค่ะ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศปักกิ่งค่ะ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศปักกิ่งค่ะ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศปักกิ่งค่ะ	！	ไม่ใช่ค่ะ ฉันเป็นนักศึกษามหาวิทยาลัยภาษาต่างประเทศปักกิ่งค่ะ
 
 ภาควิชาภาษาไทยอยู่คณะอะไรครับ	！	ภาควิชาภาษาไทยอยู่คณะอะไรครับ	！	ภาควิชาภาษาไทยอยู่คณะอะไรครับ	！	ภาควิชาภาษาไทยอยู่คณะอะไรครับ	！	ภาควิชาภาษาไทยอยู่คณะอะไรครับ	！	ภาควิชาภาษาไทยอยู่คณะอะไรครับ
 
