Update 14课 我们的大学 课后补充词汇.md

--- a/14课 我们的大学 课后补充词汇.md
+++ b/14课 我们的大学 课后补充词汇.md
@@ -1,3 +1,5 @@
+![markdown-image-489350](https://github.com/user-attachments/assets/f0238c6a-ec1f-47f0-9c0b-8d2faf2b0597)
+
 น่ารัก	！	可爱	！	Cute	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	น่ารัก	！	可爱	！	Cute
 
 ของขวัญ	！	礼物	！	Gift	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	ของขวัญ	！	礼物	！	Gift
@@ -46,6 +48,8 @@
 
 สาขาวิชา	！	学科，领域	！	Field of study, discipline	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	สาขาวิชา	！	学科，领域	！	Field of study, discipline
 
+![markdown-image-489350](https://github.com/user-attachments/assets/f0238c6a-ec1f-47f0-9c0b-8d2faf2b0597)
+
 น้อย	！	少	！	Few, little	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	น้อย	！	少	！	Few, little
 
 คอมพิวเตอร์	！	计算机	！	Computer	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	คอมพิวเตอร์	！	计算机	！	Computer
@@ -80,5 +84,6 @@
 
 เศรษฐศาสตร์	！	经济学	！	Economics	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	เศรษฐศาสตร์	！	经济学	！	Economics
 
+![markdown-image-489350](https://github.com/user-attachments/assets/f0238c6a-ec1f-47f0-9c0b-8d2faf2b0597)
 
 
