Update 14课 我们的大学 语法词汇.md

--- a/14课 我们的大学 语法词汇.md
+++ b/14课 我们的大学 语法词汇.md
@@ -91,7 +91,7 @@
 
 ผู้สูงอายุ	!	Elderly person	!	年龄高的人	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	ผู้สูงอายุ	!	Elderly person	!	年龄高的人
 
-รถไฟควรเร็วสูง	!	High-speed train	!	高速	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	รถไฟควรเร็วสูง	!	High-speed train	!	高速
+รถไฟความเร็วสูง	!	High-speed train	!	高速	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	รถไฟความเร็วสูง	!	High-speed train	!	高速
 
 ประสิทธิภาพสูง	!	High efficiency	!	高效率	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	ประสิทธิภาพสูง	!	High efficiency	!	高效率
 
