--- a/15课 时间 课文1.md
+++ b/15课 时间 课文1.md
@@ -20,4 +20,4 @@
 
 มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！	มีรอบค่ำพรุ่งนี้ไหมครับ	！
 
-ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรีนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！<img width="2356" alt="image" src="https://github.com/user-attachments/assets/1e268a70-011a-4192-94dd-fcabdc273dc6" />
+ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！	ตั๋วพรุ่งนี้เหลือแต่รอบบ่าย2 โมง ถ้าคุณอยากได้รอบค่ำก็ซื้อตั๋ววันมะรืนนี้ซีครับ ตั๋ววันมะรีนนี้ยังมีเหลือเยอะแยะ	！
