--- a/16课 打扫卫生 词汇.md
+++ b/16课 打扫卫生 词汇.md
@@ -96,7 +96,7 @@
 
 ส่วนมาก	！	most, mostly	！	大多数，通常	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	ส่วนมาก	！	most, mostly	！	大多数，通常	！	ส่วนมาก	！
 
-เตรียมบทเรียน	！	prepare lesson materials	！	准备教学材料	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	prepare lesson materials	！	准备教学材料	！	เตรียมบทเรียน	！
+เตรียมบทเรียน	！	prepare lesson	！	预习	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	เตรียมบทเรียน	！	prepare lesson	！	预习	！	！	เตรียมบทเรียน	！
 
 ทําความสะอาด	！	clean up	！	清理	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	ทําความสะอาด	！	clean up	！	清理	！	ทําความสะอาด	！
 
