Update 16课 打扫卫生 练习词汇.md

--- a/16课 打扫卫生 练习词汇.md
+++ b/16课 打扫卫生 练习词汇.md
@@ -34,11 +34,11 @@
 
 ชาวนา	！	Farmer	！	农民	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	ชาวนา	！	Farmer	！	农民
 
-ผูพูด	！	Speaker	！	演讲者	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	ผูพูด	！	Speaker	！	演讲者
+ผู้พูด	！	Speaker	！	演讲者	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	ผู้พูด	！	Speaker	！	演讲者
 
 พัฒนา	！	Develop	！	发展	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	พัฒนา	！	Develop	！	发展
 
-ผูฟัง	！	Listener	！	听众	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	ผูฟัง	！	Listener	！	听众
+ผู้ฟัง	！	Listener	！	听众	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	ผู้ฟัง	！	Listener	！	听众
 
 สัมพันธภาพ	！	Relationship	！	关系	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	สัมพันธภาพ	！	Relationship	！	关系
 
